--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        debug {
+            storePassword 'addingcalc'
+            keyPassword 'addingcalc'
+            keyAlias 'keycalc'
+            storeFile file('E:\\Android with Rossyn\\Math Num Calculator\\keystore\\keyfile.jks')
+        }
+    }
     namespace 'com.hayat.addingcalc.mathnum'
     compileSdk 34
 
@@ -14,18 +22,25 @@ android {
         versionName "1.0"
         setProperty("archivesBaseName", "mathnum-$versionName")
         vectorDrawables.useSupportLibrary true
-        renderscriptTargetApi 24
+        renderscriptTargetApi 26
         renderscriptSupportModeEnabled true
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildFeatures {
-        viewBinding true
         buildConfig true
     }
+
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
